# ExamplePlugin-CommonLibSSE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  MyFirstPlugin.sln  MyFirstPlugin.vcxproj  MyFirstPlugin.vcxproj.filters  README.md  bootstrap.ps1  exports.def  vcpkg.json  version.rc
.github/workflows/: cmake.yml
cmake/: archive_artifacts.cmake
include/: version.h
ports/commonlibsse/: portfile.cmake  vcpkg.json
scripts/: archive_artifacts.py
src/: CMakeLists.txt  PCH.h  main.cpp  version.h
